--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@supabase/ssr": "^0.3.0",
+    "@supabase/supabase-js": "^2.43.4",
     "@turf/turf": "^6.5.0",
     "firebase": "^10.8.0",
     "gsap": "^3.12.2",
